--- a/erp/templates/dashboard.html
+++ b/erp/templates/dashboard.html
@@ -389,7 +389,7 @@
                 </div>
               </div>
               <div class="card-content">
-                <p class="category"><strong>Staff's</strong></p>
+                <p class="category"><strong>Staff</strong></p>
                 <h3 class="card-title">{{staff}}</h3>
               </div>
             </div>
