Fix some small issue

--- a/Employee/templates/Employee/Showmeetingdetails.html
+++ b/Employee/templates/Employee/Showmeetingdetails.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="table-container">
-            <h1>Project List</h1>
+            <h1>Teacher's List</h1>
             <div class="scan-line"></div>
             <table class="table" style="color: aliceblue;">
                 <thead>
